--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <!--Main Contributor: Jeff -->
+
 <head>
     <title>Home</title>
     <link rel="stylesheet" href="styles.css">
@@ -18,9 +19,11 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="images/logo2.png" alt="Logo" class="logo" width="200" height="auto">
-            <h1 class="main-heading text-center">Zombie Survival Training Camp</h1>
+            <div class="logo-container">
+            <img src="images/logo2.png" alt="Logo" class="logo" width="150" height="auto">
         </div>
+        
+        <h1 class="main-heading">Zombie Survival Training Camp</h1>
         <nav class="text-center">
             <a href="about.html">About Us</a> |
             <a href="trainingplans.html">Training Plans</a> |
@@ -28,6 +31,7 @@
             <a href="locations.html">Location</a> |
             <a href="contactUs.html">Contact Us</a>
         </nav>
+    </div>
     </div>
 
     <div class="container text-center">
@@ -37,23 +41,25 @@
     <h1 class="section-heading">ONE OF A KIND SURVIVAL TRAINING</h1>
     <p class="section-text">Welcome to our One-of-a-Kind Zombie Survival Training Camp — an immersive experience like no
         other! <br> Unleash your
-        inner survivor as our expert instructors guide you through a hands-on journey, <br>
-        equipping you with the essential
-        skills needed to thrive in a world overrun by the undead. <br>
+        inner survivor as our expert instructors guide you through a hands-on journey,
+        equipping <br> you with the essential
+        skills needed to thrive in a world overrun by the undead.
 
-        From mastering self-defense techniques to honing wilderness survival skills, <br> our camp goes beyond the ordinary,
-        preparing you for the unexpected challenges that may arise during a zombie apocalypse. Join a community of
-        like-minded individuals, and embark on a transformative adventure that combines physical fitness, tactical
-        training, and strategic thinking.
+        From mastering self-defense <br> techniques to honing wilderness survival skills, our camp goes beyond the
+        ordinary,
+        preparing you for the<br> unexpected challenges that may arise during a zombie apocalypse.<br>
 
-        Are you ready to turn fear into fortitude? Embrace the extraordinary and enroll in our Zombie Survival Training
+    <p class="section-text">Join a community of
+        like-minded individuals, and embark on a transformative adventure that combines <br> physical fitness, tactical
+        training, and strategic thinking. Are you ready to turn fear into fortitude? <br>Embrace the extraordinary and
+        enroll in our Zombie Survival Training
         Camp today!</p>
 
-    <h1>Meet Your Instructors</h1>
+    <h1 class="section-heading">Meet Your Instructors</h1>
     <div class="instructor-container">
-        <a href="aboutUs.html" class="round-button" id="jeffButton" onclick="showInstructorDialog('Jeff')">Jeff</a>
-        <a href="aboutUs.html" class="round-button" id="jonButton" onclick="showInstructorDialog('Jon')">Jon</a>
-        <a href="aboutUs.html" class="round-button" id="JinyaButton" onclick="showInstructorDialog('Jinya')">Jinya</a>
+        <a href="about.html" class="round-button" id="jeffButton" onclick="showInstructorDialog('Jeff')">Jeff</a>
+        <a href="about.html" class="round-button" id="jonButton" onclick="showInstructorDialog('Jon')">Jon</a>
+        <a href="about.html" class="round-button" id="JinyaButton" onclick="showInstructorDialog('Jinya')">Jinya</a>
     </div>
 
 
@@ -67,11 +73,10 @@
         optional.
 
     <div class="survival-tips">
-        <h1>Survival Tips&Trainings</h1>
-        <p>12 tips for surviving a zombie apocalypse</p>
-        <ol class="tips-list">
-            <li><strong>Separate friends from foes:</strong> You can’t survive an apocalypse alone. Build a
-                small,
+        <h1 class="section-heading">Survival Tips&Trainings</h1>
+        <p class="section-text-tip">12 tips for surviving a zombie apocalypse: </p>
+        <ol class="numbered-tips-list">
+            <li><strong>Separate friends from foes:</strong> You can’t survive an apocalypse alone. Build a small,
                 close-knit team of allies.</li>
 
             <li><strong>Set up a base:</strong> Find a safe place before dark where you can plan and sleep
@@ -121,10 +126,6 @@
         </ol>
     </div>
 
-            <li><strong>Beware of humans:</strong> In an apocalypse, friends can become foes quickly. Trust no
-                one
-                blindly.</li>
-        </ol>
     </div>
     <br>
     <br>
