--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
         </nav>
     </div>
     </div>
+<!-- Add this to your HTML where you want the slider to appear -->
+<div class="slider-container">
+    <div class="slider" id="slider">
+        <!-- Images will be dynamically added here -->
+        <img src="images/50%.png" alt="Deal" class="Deal" width="300" height="200">
+        <img src="images/Bootcamp.png" alt="Camp" class="camp" width="300" height="200">
+    </div>
+    <button onclick="prevSlide()">Previous</button>
+    <button onclick="nextSlide()">Next</button>
+</div>
 
     <div class="container text-center">
         <img src="images/Home Page.png" alt="home picture" class="home mx-auto" style="max-width: 100%;">
