--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
 
 <head>
     <title>Home</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="script.js"></script>
 
 </head>
 
@@ -34,19 +33,37 @@
     </div>
     </div>
 <!-- Add this to your HTML where you want the slider to appear -->
-<div class="slider-container">
-    <div class="slider" id="slider">
-        <!-- Images will be dynamically added here -->
-        <img src="images/50%.png" alt="Deal" class="Deal" width="300" height="200">
-        <img src="images/Bootcamp.png" alt="Camp" class="camp" width="300" height="200">
-    </div>
-    <button onclick="prevSlide()">Previous</button>
-    <button onclick="nextSlide()">Next</button>
+<h2>Automatic Slideshow</h2>
+<p>Change image every 2 seconds:</p>
+
+<div class="slideshow-container">
+
+<div class="mySlides fade">
+  <div class="numbertext">1 / 3</div>
+  <img src="images/Bootcamp.png" style="width:100%">
+  <div class="text">Caption Text</div>
 </div>
 
-    <div class="container text-center">
-        <img src="images/Home Page.png" alt="home picture" class="home mx-auto" style="max-width: 100%;">
-    </div>
+<div class="mySlides fade">
+  <div class="numbertext">2 / 3</div>
+  <img src="images/Sales.png" style="width:100%">
+  <div class="text">Caption Two</div>
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">3 / 3</div>
+  <img src="images/Home Page.png" style="width:100%">
+  <div class="text">Caption Three</div>
+</div>
+
+</div>
+<br>
+
+<div style="text-align:center">
+  <span class="dot"></span> 
+  <span class="dot"></span> 
+  <span class="dot"></span> 
+</div>
 
     <h1 class="section-heading">ONE OF A KIND SURVIVAL TRAINING</h1>
     <p class="section-text">Welcome to our One-of-a-Kind Zombie Survival Training Camp — an immersive experience like no
