--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <!--Main Contributor: Jeff -->
 
 <head>
-    <title>Home</title>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Home</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -33,27 +34,26 @@
     </div>
     </div>
 <!-- Add this to your HTML where you want the slider to appear -->
-<h2>Automatic Slideshow</h2>
-<p>Change image every 2 seconds:</p>
+
 
 <div class="slideshow-container">
 
 <div class="mySlides fade">
-  <div class="numbertext">1 / 3</div>
-  <img src="images/Bootcamp.png" style="width:100%">
-  <div class="text">Caption Text</div>
+  
+  <img src="images/Bootcamp.png" style="width: 300px; height: 300px">
+  
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">2 / 3</div>
-  <img src="images/Sales.png" style="width:100%">
-  <div class="text">Caption Two</div>
+  
+  <img src="images/Sales.png" style="width: 300px; height: 300px">
+  
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">3 / 3</div>
-  <img src="images/Home Page.png" style="width:100%">
-  <div class="text">Caption Three</div>
+  
+  <img src="images/Home Page.png" style="width: 300px; height: 300px">
+  
 </div>
 
 </div>
