update nav bar and add gradient to training plans

--- a/trainingplans.html
+++ b/trainingplans.html
@@ -56,7 +56,7 @@
 
     <div class="col" style=" margin-left: 10%; margin-right: 10%;">
         <div class="d-flex justify-content-center rounded-corners"
-            style=" width: 75%;background: url('images/tP/SBB.jpg')">
+            style=" width: 75%;background:  linear-gradient( rgba(0, 0, 0, 0),  rgba(0, 0, 0, 0.801)), url('images/tP/SBB.jpg')">
             <div class="media border p-3 rounded-corners">
                 <a href="trainingplans.html" id="SBB" style="text-decoration: none;"
                     onclick="showInstructorDialog('SBB')">
@@ -70,7 +70,7 @@
                                 $49.99
                             </span>
                         </h1>
-                        <p style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px; margin-right: 10%;">
+                        <p style="font-size: 15px; color: #fefefe; text-shadow: #0e0d0d 1px 0 10px; margin-right: 10%;">
                             Description: <br>
                             A comprehensive introductory course covering the fundamental survival skills necessary to
                             navigate and endure a zombie outbreak. This plan includes hands-on training in basic
@@ -84,7 +84,7 @@
         </div>
         <br>
         <div class="d-flex justify-content-center rounded-corners"
-            style="object-fit: cover ; width: 75%; background: url('images/tP/ACTI.jpg')">
+            style="object-fit: cover ; width: 75%; background:  linear-gradient( rgba(0, 0, 0, 0),  rgba(0, 0, 0, 0.801)), url('images/tP/ACTI.jpg')">
             <div class="media border p-3 rounded-corners">
                 <a href="trainingplans.html" id="ACTI" style="text-decoration: none;"
                     onclick="showInstructorDialog('ACTI')">
@@ -98,7 +98,7 @@
                                 $49.99
                             </span>
                         </h1>
-                        <p style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px; margin-right: 10%;">
+                        <p style="font-size: 15px; color: #fefefe; text-shadow: #0e0d0d 1px 0 10px; margin-right: 10%;">
                             Description: <br>
                             An intensive training program designed for individuals seeking advanced combat skills
                             specifically tailored for zombie encounters. This plan focuses on weapon proficiency, close
@@ -112,7 +112,7 @@
         </div>
         <br>
         <div class="d-flex justify-content-center rounded-corners"
-            style=" width: 75%;background: url('images/tP/ODaFW.jpg')">
+            style=" width: 75%;background:  linear-gradient( rgba(0, 0, 0, 0),  rgba(0, 0, 0, 0.801)), url('images/tP/ODaFW.jpg')">
             <div class="media border p-3 rounded-corners">
                 <a href="trainingplans.html" id="ODaFW" style="text-decoration: none;"
                     onclick="showInstructorDialog('ODaFW')">
@@ -126,7 +126,7 @@
                                 $99.99
                             </span>
                         </h1>
-                        <p style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px; margin-right: 10%;">
+                        <p style="font-size: 15px; color: #fefefe; text-shadow: #0e0d0d 1px 0 10px; margin-right: 10%;">
                             Description: <br>
                             This specialized workshop emphasizes fortification techniques and outpost defense strategies
                             against zombie hordes. Participants will engage in practical sessions covering fortification
@@ -140,7 +140,7 @@
         </div>
         <br>
         <div class="d-flex justify-content-center rounded-corners"
-            style=" width: 75%;background: url('images/tP/MERAS.jpg')">
+            style=" width: 75%;background:  linear-gradient( rgba(0, 0, 0, 0),  rgba(0, 0, 0, 0.801)), url('images/tP/MERAS.jpg')">
             <div class="media border p-3 rounded-corners">
                 <a href="trainingplans.html" id="MERAS" style="text-decoration: none;"
                     onclick="showInstructorDialog('MERAS')">
@@ -154,7 +154,7 @@
                                 $125.99
                             </span>
                         </h1>
-                        <p style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px; margin-right: 10%;">
+                        <p style="font-size: 15px; color: #fefefe; text-shadow: #0e0d0d 1px 0 10px; margin-right: 10%;">
                             Description: <br>
                             Aimed at medical professionals, first responders, and civilians, this plan focuses on
                             medical emergency response in the context of a zombie outbreak. It covers trauma care,
@@ -168,7 +168,7 @@
         </div>
         <br>
         <div class="d-flex justify-content-center rounded-corners"
-            style=" width: 75%;background: url('images/tP/SCBLD.jpg')">
+            style=" width: 75%;background: linear-gradient( rgba(0, 0, 0, 0),  rgba(0, 0, 0, 0.801)), url('images/tP/SCBLD.jpg');">
             <div class="media border p-3 rounded-corners">
                 <a href="trainingplans.html" id="SCBLD" style="text-decoration: none;"
                     onclick="showInstructorDialog('SCBLD')">
@@ -182,7 +182,7 @@
                                 $199.99
                             </span>
                         </h1>
-                        <p style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px; margin-right: 10%;">
+                        <p style="font-size: 15px; color: #fefefe; text-shadow: #0e0d0d 1px 0 10px; margin-right: 10%;">
                             Description: <br>
                             Geared towards individuals interested in leadership roles and community building during a
                             zombie apocalypse. This program provides guidance on establishing survivor communities,
