--- a/contactUs.html
+++ b/contactUs.html
@@ -26,6 +26,7 @@
           <ul class="navbar-nav me-auto mb-2 mb-md-0 navbar-nav">
             <li class="nav-item"><a href="index.html" class="nav-link fs-4">Home</a></li>
             <li class="nav-item"><a href="about.html" class="nav-link fs-4">About Us</a></li>
+            <li class="nav-item"><a href="trainingplans.html" class="nav-link fs-4">Training Plans</a></li>
             <li class="nav-item"><a href="reviews1.html" class="nav-link fs-4">Reviews</a></li>
             <li class="nav-item"><a href="locations.html" class="nav-link fs-4">Location</a></li>
             <li class="nav-item"><a href="contactUs.html" class="nav-link fs-4">Contact Us</a></li>
