a few syntax aligment and commenting

--- a/contactUs.html
+++ b/contactUs.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
+  <!--Nav Bar: Jinya-->
   <nav class="navbar navbar-expand-lg py-3 navbar-background">
     <div class="container">
       <a class="navbar-brand" href="index.html">
