--- a/trainingplans.html
+++ b/trainingplans.html
@@ -21,6 +21,7 @@
 </head>
 
 <body>
+    <!--Nav Bar: Jinya-->
     <nav class="navbar navbar-expand-lg py-3 navbar-background" style="background-color: white;">
         <div class="container">
             <a class="navbar-brand" href="index.html">
@@ -47,13 +48,16 @@
         </div>
     </nav>
 
-
+    <!--Training Plans Body By: Jonathan-->
+    <!--Title-->
     <h2 class="d-flex justify-content-center" style="font-family: '1942'; font-size: 50px;">Training
         Plans</h2>
 
+    <!--SubTitle-->
     <p class="d-flex justify-content-center" style="font-family: '1942'; font-size: 25px; ">Below is a list of training
         courses we provide:</p>
 
+    <!--Plan-->
     <div class="col" style=" margin-left: 10%; margin-right: 10%;">
         <div class="d-flex justify-content-center rounded-corners"
             style=" width: 75%;background:  linear-gradient( rgba(0, 0, 0, 0),  rgba(0, 0, 0, 0.801)), url('images/tP/SBB.jpg')">
@@ -83,6 +87,7 @@
             </div>
         </div>
         <br>
+        <!--Plan-->
         <div class="d-flex justify-content-center rounded-corners"
             style="object-fit: cover ; width: 75%; background:  linear-gradient( rgba(0, 0, 0, 0),  rgba(0, 0, 0, 0.801)), url('images/tP/ACTI.jpg')">
             <div class="media border p-3 rounded-corners">
@@ -111,6 +116,7 @@
             </div>
         </div>
         <br>
+        <!--Plan-->
         <div class="d-flex justify-content-center rounded-corners"
             style=" width: 75%;background:  linear-gradient( rgba(0, 0, 0, 0),  rgba(0, 0, 0, 0.801)), url('images/tP/ODaFW.jpg')">
             <div class="media border p-3 rounded-corners">
@@ -139,6 +145,7 @@
             </div>
         </div>
         <br>
+        <!--Plan-->
         <div class="d-flex justify-content-center rounded-corners"
             style=" width: 75%;background:  linear-gradient( rgba(0, 0, 0, 0),  rgba(0, 0, 0, 0.801)), url('images/tP/MERAS.jpg')">
             <div class="media border p-3 rounded-corners">
@@ -167,6 +174,7 @@
             </div>
         </div>
         <br>
+        <!--Plan-->
         <div class="d-flex justify-content-center rounded-corners"
             style=" width: 75%;background: linear-gradient( rgba(0, 0, 0, 0),  rgba(0, 0, 0, 0.801)), url('images/tP/SCBLD.jpg');">
             <div class="media border p-3 rounded-corners">
@@ -195,9 +203,12 @@
             </div>
         </div>
     </div><!--col-->
-    <p class="d-flex justify-content-center" style=" margin-left: 10%;margin-right: 10%; font-family: '1942'; font-size: 25px; ">Each training plan offered
+    <!--Subtext-->
+    <p class="d-flex justify-content-center"
+        style=" margin-left: 10%;margin-right: 10%; font-family: '1942'; font-size: 25px; ">Each training plan offered
         by Zombiegeddon Academy caters to different aspects of survival, defense, medical care, leadership, and
         community-building, ensuring a comprehensive preparation for a fictional zombie apocalypse.</p>
+    <!--Footer-->
     <br>
     <br>
     <footer class="navbar-background" style="background-color: #fbf7f4;">
