--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+  <!--Nav Bar: Jinya-->
   <nav class="navbar navbar-expand-lg py-3 navbar-background" style="background-color: white;">
     <div class="container">
       <a class="navbar-brand" href="index.html">
@@ -79,6 +80,7 @@
         </p>
       </div>
 
+      <!--Footer-->
       <br>
       <br>
       <footer class="navbar-background" style="background-color: #fbf7f4;">
