--- a/index.html
+++ b/index.html
@@ -17,60 +17,59 @@
 </head>
 
 <body>
+    <!--Nac Bar For main: Jeff-->
     <div class="container">
         <div class="header">
             <div class="logo-container">
-            <img src="images/logo2.png" alt="Logo" class="logo" width="150" height="auto">
+                <img src="images/logo2.png" alt="Logo" class="logo" width="150" height="auto">
+            </div>
+
+            <h1 class="main-heading">Zombie Survival Training Camp</h1>
+            <nav class="text-center">
+                <a href="about.html">About Us</a> |
+                <a href="trainingplans.html">Training Plans</a> |
+                <a href="reviews1.html">Reviews</a> |
+                <a href="locations.html">Location</a> |
+                <a href="contactUs.html">Contact Us</a>
+            </nav>
         </div>
-        
-        <h1 class="main-heading">Zombie Survival Training Camp</h1>
-        <nav class="text-center">
-            <a href="about.html">About Us</a> |
-            <a href="trainingplans.html">Training Plans</a> |
-            <a href="reviews1.html">Reviews</a> |
-            <a href="locations.html">Location</a> |
-            <a href="contactUs.html">Contact Us</a>
-        </nav>
     </div>
+    <!-- Add this to your HTML where you want the slider to appear -->
+
+
+    <div class="slideshow-container">
+
+        <div class="mySlides fade">
+
+            <img src="images/Bootcamp.png" style="width: 300px; height: 300px">
+
+        </div>
+
+        <div class="mySlides fade">
+
+            <img src="images/Sales.png" style="width: 300px; height: 300px">
+
+        </div>
+
+        <div class="mySlides fade">
+
+            <img src="images/Home Page.png" style="width: 300px; height: 300px">
+
+        </div>
+
     </div>
-<!-- Add this to your HTML where you want the slider to appear -->
+    <br>
 
-
-<div class="slideshow-container">
-
-<div class="mySlides fade">
-  
-  <img src="images/Bootcamp.png" style="width: 300px; height: 300px">
-  
-</div>
-
-<div class="mySlides fade">
-  
-  <img src="images/Sales.png" style="width: 300px; height: 300px">
-  
-</div>
-
-<div class="mySlides fade">
-  
-  <img src="images/Home Page.png" style="width: 300px; height: 300px">
-  
-</div>
-
-</div>
-<br>
-
-<div style="text-align:center">
-  <span class="dot"></span> 
-  <span class="dot"></span> 
-  <span class="dot"></span> 
-</div>
+    <div style="text-align:center">
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+    </div>
 
     <h1 class="section-heading">ONE OF A KIND SURVIVAL TRAINING</h1>
     <p class="section-text">Welcome to our One-of-a-Kind Zombie Survival Training Camp — an immersive experience like no
-        other! <br> Unleash your
-        inner survivor as our expert instructors guide you through a hands-on journey,
-        equipping <br> you with the essential
-        skills needed to thrive in a world overrun by the undead.
+        other! <br> Unleash your inner survivor as our expert instructors guide you through a hands-on journey,
+        equipping <br> you with the essential skills needed to thrive in a world overrun by the undead.
 
         From mastering self-defense <br> techniques to honing wilderness survival skills, our camp goes beyond the
         ordinary,
