--- a/reviews2.html
+++ b/reviews2.html
@@ -169,6 +169,7 @@
             </div>
         </div><!--Review-->
     </div><!--col-->
+
     <div><!--Pagination By: Jonathan-->
         <ul class="pagination pagination-lg d-flex justify-content-center">
             <li><a href="reviews1.html">1</a></li>
@@ -181,7 +182,7 @@
     <br>
     <footer class="navbar-background" style="background-color: #fbf7f4;">
         <img src="images/CopyRight.png" width="100px" class="align-middle mx-auto d-block" alt="My Website">
-        <p class="text-center" style="color: black; background-color: white;">&copy 2023 | Group 5 - CS 220</p>
+        <p class="text-center" style="color: black; background-color: #fbf7f4;">&copy 2023 | Group 5 - CS 220</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
