--- a/about.html
+++ b/about.html
@@ -44,11 +44,12 @@
       </div>
     </div>
   </nav>
-
+<div class="section-heading">
   <h1>Meet Your Instructors</h1>
+</div>
   <div class="instructor-container">
     <div class="instructor">
-      <img src="images/jeff.jpg" alt="Jeff" class="instructor-img">
+      <img src="images/Jeff's Profile.jpg" alt="Jeff" class="instructor-img" width="300" height="200">
 
 
       <div class="person">
@@ -61,7 +62,7 @@
       </div>
 
       <div class="instructor">
-        <img src="images/jon.jpg" alt="Jon" class="instructor-img">
+        <img src="images/Negan.webp" alt="Jon" class="instructor-img" width="300" height="200">
         <p class="instructor-info">
           <strong>Jon</strong><br>
           Go-to Weapon: Crossbow<br>
@@ -71,7 +72,7 @@
       </div>
 
       <div class="instructor">
-        <img src="images/jinya.jpg" alt="Jinya" class="instructor-img">
+        <img src="images/Glenn.webp" alt="Jinya" class="instructor-img" width="300" height="200">
         <p class="instructor-info">
           <strong>Jinya</strong><br>
           Go-to Weapon: Machete<br>
