--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
             <a href="#" class="fa fa-youtube"></a>
         </div>
     </div>
-    
 
-    <!-- Add this to your HTML where you want the slider to appear -->
 
 
     <div class="slideshow-container">
@@ -70,7 +68,7 @@
 
         <div class="mySlides fade">
 
-            <img src="images/Home Page.png" style="width: 300px; height: 300px">
+            <img src="images/Combat.png" style="width: 300px; height: 300px">
 
         </div>
 
