--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
   <div class="instructor-container">
     <div class="instructor">
       <img src="images/Jeff's Profile.jpg" alt="Jeff" class="instructor-img" width="300" height="200">
-
+    </div>
 
       <div class="person">
         <p class="instructor-info">
@@ -63,6 +63,7 @@
 
       <div class="instructor">
         <img src="images/Negan.webp" alt="Jon" class="instructor-img" width="300" height="200">
+      </div>
         <p class="instructor-info">
           <strong>Jon</strong><br>
           Go-to Weapon: Crossbow<br>
@@ -70,9 +71,11 @@
           Favorite stress reliever: Yoga
         </p>
       </div>
+    </div>
 
       <div class="instructor">
         <img src="images/Glenn.webp" alt="Jinya" class="instructor-img" width="300" height="200">
+      </div>
         <p class="instructor-info">
           <strong>Jinya</strong><br>
           Go-to Weapon: Machete<br>
@@ -80,7 +83,9 @@
           Favorite stress reliever: Singing
         </p>
       </div>
-
+      </div>
+    </div>
+  
       <!--Footer-->
       <br>
       <br>
@@ -91,6 +96,7 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
         </script>
+      </div>
 </body>
 
 </html>
