--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <!--Main Contributor: Jeff -->
+
 <head>
   <title>About Us</title>
   <link rel="stylesheet" href="styles.css">
@@ -44,59 +45,64 @@
       </div>
     </div>
   </nav>
-<div class="section-heading">
-  <h1>Meet Your Instructors</h1>
-</div>
+  <div class="section-heading">
+    <h1>Meet Your Instructors</h1>
+  </div>
   <div class="instructor-container">
     <div class="instructor">
       <img src="images/Jeff's Profile.jpg" alt="Jeff" class="instructor-img" width="300" height="200">
     </div>
 
-      <div class="person">
-        <p class="instructor-info">
-          <strong>Jeff</strong><br>
-          Go-to Weapon: Shotgun<br>
-          Favorite survival gear: Multi-tool<br>
-          Favorite stress reliever: Playing cards
-        </p>
-      </div>
-
-      <div class="instructor">
-        <img src="images/Negan.webp" alt="Jon" class="instructor-img" width="300" height="200">
-      </div>
-        <p class="instructor-info">
-          <strong>Jon</strong><br>
-          Go-to Weapon: Crossbow<br>
-          Favorite survival gear: Binoculars<br>
-          Favorite stress reliever: Yoga
-        </p>
-      </div>
+    <div class="person">
+      <p class="instructor-info">
+        <strong>Jeff</strong><br>
+        Go-to Weapon: Shotgun<br>
+        Favorite survival gear: Multi-tool<br>
+        Favorite stress reliever: Playing cards
+      </p>
     </div>
 
-      <div class="instructor">
-        <img src="images/Glenn.webp" alt="Jinya" class="instructor-img" width="300" height="200">
-      </div>
-        <p class="instructor-info">
-          <strong>Jinya</strong><br>
-          Go-to Weapon: Machete<br>
-          Favorite survival gear: Firestarter<br>
-          Favorite stress reliever: Singing
-        </p>
-      </div>
-      </div>
+
+
+    <div class="instructor">
+
+      <img src="images/Negan.webp" alt="Jon" class="instructor-img" width="300" height="200">
     </div>
-  
-      <!--Footer-->
-      <br>
-      <br>
-      <footer class="navbar-background" style="background-color: #fbf7f4;">
-        <img src="images/CopyRight.png" width="100px" class="align-middle mx-auto d-block" alt="My Website">
-        <p class="text-center" style="color: black; background-color: #fbf7f4;">&copy 2023 | Group 5 - CS 220</p>
-      </footer>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
-        </script>
-      </div>
+    <p class="instructor-info">
+      <strong>Jon</strong><br>
+      Go-to Weapon: Barbed-wire Bat<br>
+      Favorite survival gear: Leather Jacket<br>
+      Favorite stress reliever: Batting Practice
+    </p>
+  </div>
+  </div>
+<br>
+<br>
+
+  <div class="d-flex justify-content-center">
+    <div class="instructor">
+      <img src="images/Glenn.webp" alt="Jinya" class="instructor-img" width="300" height="200">
+    </div>
+    <p class="instructor-info">
+      <strong>Jinya</strong><br>
+      Go-to Weapon: Machete<br>
+      Favorite survival gear: Firestarter<br>
+      Favorite stress reliever: Singing
+    </p>
+  </div>
+
+  <!--Footer-->
+  <br>
+  <br>
+  <footer class="navbar-background" style="background-color: #fbf7f4;">
+    <img src="images/CopyRight.png" width="100px" class="align-middle mx-auto d-block" alt="My Website">
+    <br>
+    <p class="text-center" style="color: #fbf7f4; background-color: #fbf7f4;">&copy 2023 | Group 5 - CS 220</p>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+    </script>
+  </div>
 </body>
 
 </html>
