--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
             
     </div>
+    <!--Socials-->
     <div class="social-icons-container">
         <div class="social-row">
             <a href="#" class="fa fa-facebook"></a>
