--- a/about.html
+++ b/about.html
@@ -17,6 +17,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
 
 <body>
   <!--Nav Bar: Jinya-->
@@ -54,41 +57,66 @@
     </div>
 
     <div class="person">
+      <div>
       <p class="instructor-info">
         <strong>Jeff</strong><br>
         Go-to Weapon: Shotgun<br>
         Favorite survival gear: Multi-tool<br>
         Favorite stress reliever: Playing cards
       </p>
+          <a href="#" class="fa fa-facebook"></a>
+          <a href="#" class="fa fa-twitter"></a>
+          <a href="#" class="fa fa-instagram"></a>
+          <a href="#" class="fa fa-linkedin"></a>
+          <a href="#" class="fa fa-pinterest"></a>
+          <a href="#" class="fa fa-youtube"></a>
+        </div> 
+      
     </div>
-
-
 
     <div class="instructor">
 
       <img src="images/Negan.webp" alt="Jon" class="instructor-img" width="300" height="200">
     </div>
+    <div>
     <p class="instructor-info">
       <strong>Jon</strong><br>
       Go-to Weapon: Barbed-wire Bat<br>
       Favorite survival gear: Leather Jacket<br>
       Favorite stress reliever: Batting Practice
     </p>
+        <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-twitter"></a>
+        <a href="#" class="fa fa-instagram"></a>
+        <a href="#" class="fa fa-linkedin"></a>
+        <a href="#" class="fa fa-pinterest"></a>
+        <a href="#" class="fa fa-youtube"></a>
+      </div>
+    </div>
+  
   </div>
-  </div>
-<br>
-<br>
+  <br>
+  <br>
 
   <div class="d-flex justify-content-center">
     <div class="instructor">
       <img src="images/Glenn.webp" alt="Jinya" class="instructor-img" width="300" height="200">
     </div>
+    <div>
     <p class="instructor-info">
       <strong>Jinya</strong><br>
       Go-to Weapon: Machete<br>
       Favorite survival gear: Firestarter<br>
       Favorite stress reliever: Singing
     </p>
+        <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-twitter"></a>
+        <a href="#" class="fa fa-instagram"></a>
+        <a href="#" class="fa fa-linkedin"></a>
+        <a href="#" class="fa fa-pinterest"></a>
+        <a href="#" class="fa fa-youtube"></a>
+      </div>
+    
   </div>
 
   <!--Footer-->
