--- a/contactUs.html
+++ b/contactUs.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!--Main Contributor: Jinya -->
+<!--Main Contributor: Jinya -->
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Zombiegeddon Academy</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@400;700&display=swap" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="style/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
 </head>
+
 <body>
   <!--Nav Bar: Jinya-->
   <nav class="navbar navbar-expand-lg py-3 navbar-background">
@@ -16,7 +22,7 @@
       <a class="navbar-brand" href="index.html">
         <img src="images/logo3.png" width="200px" class="align-middle me-1 " alt="My Website">
       </a>
-  
+
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#myNavbar"
         aria-controls="myNavbar" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -51,44 +57,72 @@
     <div class="row">
       <div class="col">
         <h1 class="text-center">Contact Us</h1>
-        <p>Contacting us is a straightforward and effective way to address any questions or concerns you may have. Our dedicated support team is here to assist you with a wide range of inquiries, ensuring that you have a seamless experience. Whether you have questions about our products, need assistance navigating our services, or require clarification on any aspect of your user experience, reaching out to us is the best way to obtain accurate and timely information. We value your feedback and are committed to providing prompt and helpful responses to ensure your satisfaction. Our contact channels, including email, and phone are designed to accommodate your preferences and convenience. Don't hesitate to get in touch! We're here to help and make your interaction with us as smooth as possible! Your inquiries contribute to our ongoing commitment to excellence, and we appreciate the opportunity to assist you. Thanks!</p>
+        <p>Contacting us is a straightforward and effective way to address any questions or concerns you may have. Our
+          dedicated support team is here to assist you with a wide range of inquiries, ensuring that you have a seamless
+          experience. Whether you have questions about our products, need assistance navigating our services, or require
+          clarification on any aspect of your user experience, reaching out to us is the best way to obtain accurate and
+          timely information. We value your feedback and are committed to providing prompt and helpful responses to
+          ensure your satisfaction. Our contact channels, including email, and phone are designed to accommodate your
+          preferences and convenience. Don't hesitate to get in touch! We're here to help and make your interaction with
+          us as smooth as possible! Your inquiries contribute to our ongoing commitment to excellence, and we appreciate
+          the opportunity to assist you. Thanks!</p>
         <p>Phone: (999) 999-9999</p>
         <p>Email: admin@ZGAcademy.com</p>
 
-        
-  <section class="container">
-    <div class="row">
-      <div class="col">
-        <h2 class="text-center">Make a Reservation</h2>
-        <h3>Contact Us</h3>
-        
-        <form>
-          <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label">Email address</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-          </div>
-          <div class="mb-3">
-            <label for="exampleFormControlTextarea1" class="form-label">Send Your Message</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-          </div>
 
-          <button type="submit" class="btn btn-primary mb-3">Send</button>
-        </form>
-      </div>
-    </div>
-  </section>
-  <footer class="navbar-background">
-    <div class="container">
-      <div class="row">
-        <div class="col pt-2">
-          <a class="navbar-brand text-center" href="">
-            <img src="images/CopyRight.png" width="100px" class="align-middle mx-auto d-block" alt="My Website">
-          </a>
-          <p class="text-center">&copy 2023 | Group 5 - CS 220</p>
+        <section class="container">
+          <div class="row">
+            <div class="col">
+              <h2 class="text-center">Make a Reservation</h2>
+              <h3>Contact Us</h3>
+
+              <form>
+                <div class="mb-3">
+                  <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                </div>
+                <div class="mb-3">
+                  <label for="exampleFormControlTextarea1" class="form-label">Send Your Message</label>
+                  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+
+                <button type="submit" class="btn btn-primary mb-3">Send</button>
+              </form>
+            </div>
+          </div>
+        </section>
+
+        <!--Socials-->
+        <div class="social-icons-container d-flex justify-content-center">
+          <div class="social-row">
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-twitter"></a>
+            <a href="#" class="fa fa-instagram"></a>
+            <a href="#" class="fa fa-linkedin"></a>
+            <a href="#" class="fa fa-pinterest"></a>
+            <a href="#" class="fa fa-youtube"></a>
+          </div>
         </div>
-      </div>
-    </div>
-  </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+        <br>
+
+        <br>
+        <br>
+        <footer class="navbar-background">
+          <div class="container">
+            <div class="row">
+              <div class="col pt-2">
+                <a class="navbar-brand text-center" href="">
+                  <img src="images/CopyRight.png" width="100px" class="align-middle mx-auto d-block" alt="My Website">
+                </a>
+                <p class="text-center">&copy 2023 | Group 5 - CS 220</p>
+              </div>
+            </div>
+          </div>
+        </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+          integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+          crossorigin="anonymous"></script>
 </body>
+
 </html>
