--- a/locations.html
+++ b/locations.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!--Main Contributor: Jinya -->
+<!--Main Contributor: Jinya -->
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Zombiegeddon Academy</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@400;700&display=swap" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="style/style.css">
 </head>
+
 <body>
   <nav class="navbar navbar-expand-lg py-3 navbar-background">
     <div class="container">
       <a class="navbar-brand" href="index.html">
         <img src="images/logo3.png" width="200px" class="align-middle me-1 " alt="My Website">
       </a>
-  
+
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#myNavbar"
         aria-controls="myNavbar" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -51,8 +54,10 @@
     <div class="row">
       <div class="col">
         <h1 class="text-center">Locations</h1>
-        <h5><center>Where you can test your skills against dead!</center></h5>
-       
+        <h5>
+          <center>Where you can test your skills against dead!</center>
+        </h5>
+
 
         <table class="table table-bordered">
           <thead>
@@ -95,15 +100,18 @@
   </div>
 
   <div class="google-map">
-    <center><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24169.657344082225!2d-111.89382964999997!3d40.77945945!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8752f5aa721d9be3%3A0xc118ae242cfd5461!2sEnsign%20College!5e0!3m2!1sen!2sus!4v1701890573598!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></center>
-</div>
+    <center><iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24169.657344082225!2d-111.89382964999997!3d40.77945945!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8752f5aa721d9be3%3A0xc118ae242cfd5461!2sEnsign%20College!5e0!3m2!1sen!2sus!4v1701890573598!5m2!1sen!2sus"
+        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe></center>
+  </div>
 
   <section class="container">
     <div class="row">
       <div class="col">
         <h2 class="text-center">Make a Reservation</h2>
         <h3>Contact Us</h3>
-        
+
         <form>
           <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Email address</label>
@@ -131,6 +139,9 @@
       </div>
     </div>
   </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
