--- a/index.html
+++ b/index.html
@@ -37,19 +37,7 @@
 
             
     </div>
-    <!--Socials-->
-    <div class="social-icons-container">
-        <div class="social-row">
-            <a href="#" class="fa fa-facebook"></a>
-            <a href="#" class="fa fa-twitter"></a>
-            <a href="#" class="fa fa-instagram"></a>
-        </div>
-        <div class="social-row">
-            <a href="#" class="fa fa-linkedin"></a>
-            <a href="#" class="fa fa-pinterest"></a>
-            <a href="#" class="fa fa-youtube"></a>
-        </div>
-    </div>
+    
 
 
 
@@ -171,8 +159,26 @@
     </div>
     <br>
     <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <!--Socials-->
+    <div class="social-icons-container d-flex justify-content-center">
+        <div class="social-row">
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-twitter"></a>
+            <a href="#" class="fa fa-instagram"></a>
+            <a href="#" class="fa fa-linkedin"></a>
+            <a href="#" class="fa fa-pinterest"></a>
+            <a href="#" class="fa fa-youtube"></a>
+        </div>
+    </div>
+    <br>
+    <br>
     <footer class="navbar-background" style="background-color: #fbf7f4;">
         <img src="images/CopyRight.png" width="100px" class="align-middle mx-auto d-block" alt="My Website">
+        <br>
         <p class="text-center" style="color: black; background-color: #fbf7f4;">&copy 2023 | Group 5 - CS 220</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
