--- a/contactUs.html
+++ b/contactUs.html
@@ -78,6 +78,10 @@
 
               <form>
                 <div class="mb-3">
+                  <label for="exampleFormControlInput1" class="form-label">Full Name</label>
+                  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Your First and Last Name">
+                </div>
+                <div class="mb-3">
                   <label for="exampleFormControlInput1" class="form-label">Email address</label>
                   <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
                 </div>
