--- a/locations.html
+++ b/locations.html
@@ -134,11 +134,12 @@
           <a class="navbar-brand text-center" href="">
             <img src="images/CopyRight.png" width="220px" class="align-middle mx-auto d-block" alt="My Website">
           </a>
-          <p class="text-center">&copy 2023 | Group 5 - CS 220</p>
+          <p class="text-center">&copy <span id="year"></span> | Group 5 - CS 220</p>
         </div>
       </div>
     </div>
   </footer>
+  <script src="date.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
