change jpg to png

--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
 
     <div class="instructor">
 
-      <img src="images/Negan.webp" alt="Jon" class="instructor-img" width="300" height="200">
+      <img src="images/Negan.png" alt="Jon" class="instructor-img" width="300" height="200">
     </div>
     <div>
       <p class="instructor-info">
@@ -99,7 +99,7 @@
 
   <div class="d-flex justify-content-center">
     <div class="instructor">
-      <img src="images/Glenn.webp" alt="Jinya" class="instructor-img" width="300" height="200">
+      <img src="images/Glenn.png" alt="Jinya" class="instructor-img" width="300" height="200">
     </div>
     <div>
       <p class="instructor-info">
