--- a/reviews2.html
+++ b/reviews2.html
@@ -121,7 +121,7 @@
     <div class="col">
         <div class="d-flex justify-content-center"><!--Review-->
             <div class="media border p-3">
-                <img src="images/avatars/avatar4.JPG" class="mr-3 mt-3 rounded-circle" style="width:60px;">
+                <img src="images/avatars/avatar4.png" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                 <div class="media-body">
                     <h4><span id="user1N"></span><small><i id="user1D"></i></small></h4>
                     <p id="user1R">""</p>
@@ -131,7 +131,7 @@
 
         <div class="d-flex justify-content-center"><!--Review-->
             <div class="media border p-3">
-                <img src="images/avatars/avatar5.JPG" class="mr-3 mt-3 rounded-circle" style="width:60px;">
+                <img src="images/avatars/avatar5.png" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                 <div class="media-body">
                     <h4><span id="user2N"></span><small><i id="user2D"></i></small></h4>
                     <p id="user2R">""</p>
@@ -141,7 +141,7 @@
 
         <div class="d-flex justify-content-center"><!--Review-->
             <div class="media border p-3">
-                <img src="images/avatars/avatar3.JPG" class="mr-3 mt-3 rounded-circle" style="width:60px;">
+                <img src="images/avatars/avatar3.png" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                 <div class="media-body">
                     <h4><span id="user3N"></span><small><i id="user3D"></i></small></h4>
                     <p id="user3R">""</p>
@@ -151,7 +151,7 @@
 
         <div class="d-flex justify-content-center"><!--Review-->
             <div class="media border p-3">
-                <img src="images/avatars/avatar2.JPG" class="mr-3 mt-3 rounded-circle" style="width:60px;">
+                <img src="images/avatars/avatar2.png" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                 <div class="media-body">
                     <h4><span id="user4N"></span><small><i id="user4D"></i></small></h4>
                     <p id="user4R">""</p>
@@ -161,7 +161,7 @@
 
         <div class="d-flex justify-content-center"><!--Review-->
             <div class="media border p-3">
-                <img src="images/avatars/avatar3.JPG" class="mr-3 mt-3 rounded-circle" style="width:60px;">
+                <img src="images/avatars/avatar3.png" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                 <div class="media-body">
                     <h4><span id="user5N"></span><small><i id="user5D"></i></small></h4>
                     <p id="user5R">""</p>
