--- a/trainingplans.html
+++ b/trainingplans.html
@@ -60,7 +60,7 @@
     <!--Plan-->
     <div class="col" style=" margin-left: 10%; margin-right: 10%;">
         <div class="d-flex justify-content-center rounded-corners"
-            style=" width: 75%;background:  linear-gradient( rgba(0, 0, 0, 0),  rgba(0, 0, 0, 0.801)), url('images/tP/SBB.jpg')">
+            style=" width: 75%;background:  linear-gradient( rgba(0, 0, 0, 0),  rgba(0, 0, 0, 0.801)), url('images/tP/SBB.png')">
             <div class="media border p-3 rounded-corners">
                 <a href="trainingplans.html" id="SBB" style="text-decoration: none;"
                     onclick="showInstructorDialog('SBB')">
@@ -89,7 +89,7 @@
         <br>
         <!--Plan-->
         <div class="d-flex justify-content-center rounded-corners"
-            style="object-fit: cover ; width: 75%; background:  linear-gradient( rgba(0, 0, 0, 0),  rgba(0, 0, 0, 0.801)), url('images/tP/ACTI.jpg')">
+            style="object-fit: cover ; width: 75%; background:  linear-gradient( rgba(0, 0, 0, 0),  rgba(0, 0, 0, 0.801)), url('images/tP/ACTI.png')">
             <div class="media border p-3 rounded-corners">
                 <a href="trainingplans.html" id="ACTI" style="text-decoration: none;"
                     onclick="showInstructorDialog('ACTI')">
@@ -118,7 +118,7 @@
         <br>
         <!--Plan-->
         <div class="d-flex justify-content-center rounded-corners"
-            style=" width: 75%;background:  linear-gradient( rgba(0, 0, 0, 0),  rgba(0, 0, 0, 0.801)), url('images/tP/ODaFW.jpg')">
+            style=" width: 75%;background:  linear-gradient( rgba(0, 0, 0, 0),  rgba(0, 0, 0, 0.801)), url('images/tP/ODaFW.png')">
             <div class="media border p-3 rounded-corners">
                 <a href="trainingplans.html" id="ODaFW" style="text-decoration: none;"
                     onclick="showInstructorDialog('ODaFW')">
@@ -147,7 +147,7 @@
         <br>
         <!--Plan-->
         <div class="d-flex justify-content-center rounded-corners"
-            style=" width: 75%;background:  linear-gradient( rgba(0, 0, 0, 0),  rgba(0, 0, 0, 0.801)), url('images/tP/MERAS.jpg')">
+            style=" width: 75%;background:  linear-gradient( rgba(0, 0, 0, 0),  rgba(0, 0, 0, 0.801)), url('images/tP/MERAS.png')">
             <div class="media border p-3 rounded-corners">
                 <a href="trainingplans.html" id="MERAS" style="text-decoration: none;"
                     onclick="showInstructorDialog('MERAS')">
@@ -176,7 +176,7 @@
         <br>
         <!--Plan-->
         <div class="d-flex justify-content-center rounded-corners"
-            style=" width: 75%;background: linear-gradient( rgba(0, 0, 0, 0),  rgba(0, 0, 0, 0.801)), url('images/tP/SCBLD.jpg');">
+            style=" width: 75%;background: linear-gradient( rgba(0, 0, 0, 0),  rgba(0, 0, 0, 0.801)), url('images/tP/SCBLD.png');">
             <div class="media border p-3 rounded-corners">
                 <a href="trainingplans.html" id="SCBLD" style="text-decoration: none;"
                     onclick="showInstructorDialog('SCBLD')">
